<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:padding="16sp">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="16dp"
        android:src="@drawable/default_profile_pic" />

    <TextView
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_pic"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/your_name"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personName"
        android:text="@string/grade_text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/energy_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grade"

        android:paddingBottom="16sp"
        android:text="@string/energy_score_0"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@+id/energy_score"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <EditText
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio_text"
            android:textSize="20sp" />
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_revert" />
</RelativeLayout>